--- a/application/admin/view/goods/goods_coupon.html
+++ b/application/admin/view/goods/goods_coupon.html
@@ -20,6 +20,7 @@
         </form>
         <div class="cl pd-5 bg-1 bk-gray mt-20">
             <span class="l">
+                <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
                 <a href="javascript:;" onclick="category_add('添加优惠券','{:url('admin/goods/add_coupon')}','1360','800')"
                     class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe600;</i>
@@ -33,9 +34,10 @@
                     <th scope="col" colspan="12">商品分类列表</th>
                 </tr>
                 <tr class="text-c">
+                    <th width="25"><input type="checkbox" name="" value=""></th>
                     <th width="40">ID</th>
                     <th width="150">优惠券名称</th>
-                    <!-- <th width="150">商品名称</th> -->
+                    <th width="150">商品名称</th>
                     <th width="150">使用期限(天)</th>
                     <th width="150">额度</th>
                     <th width="130">添加时间</th>
@@ -49,9 +51,10 @@
                 {if condition="isset($list) && $list"}
                 {volist name="list" id="vo"}
                 <tr class="text-c">
+                    <td><input type="checkbox" value="{$vo.id}" name=""></td>
                     <td>{$vo.id}</td>
                     <td>{$vo.name}</td>
-                    <!-- <td>商品名称</td> -->
+                    <td>{if condition="isset($cname[$vo.goods_id])"}{$cname[$vo.goods_id]}{else /}-{/if}</td>
                     <td>10</td>
                     <td>满{$vo.quota}减{$vo.money}</td>
                     <td>{:date('Y-m-d,H:i:s',$vo.addtime)}</td>
@@ -76,7 +79,7 @@
                         <a style="text-decoration:none" onClick="goods_stop(this)" href="javascript:;" title="禁用优惠券">
                             <i class="Hui-iconfont">&#xe631;</i>
                         </a>
-                        
+
                         {else /}
                         <a style="text-decoration:none" onClick="goods_start(this)" href="javascript:;" title="启用优惠券">
                             <i class="Hui-iconfont">&#xe615;</i>
@@ -84,11 +87,11 @@
                         {/if}
 
                         <a title="编辑" href="javascript:;"
-                            onclick="category_edit('商品分类编辑','/admin/goods/add_coupon?id={$vo.id}','','800','500')"
+                            onclick="category_edit('商品分类编辑','/admin/goods/add_coupon?coupon_id={$vo.id}','','1200','800')"
                             class="ml-5" style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6df;</i>
                         </a>
-                        <a title="删除" href="javascript:;" onclick="category_del(this,'{$vo.id}')" class="ml-5"
+                        <a title="删除" href="javascript:;" onclick="coupon_del(this,'{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6e2;</i>
                         </a>
@@ -98,7 +101,7 @@
                 {/if}
             </tbody>
         </table>
-        <div class="pages">{//$list->render()}</div>
+        <div class="pages">{$list->render()}</div>
         {if condition="!isset($list) or !$list"}
         <p class="no-data">暂无数据</p>
         {/if}
@@ -122,9 +125,9 @@
             layer_show(title, url, w, h);
         }
         /*商品分类-删除*/
-        function category_del(obj, id) {
+        function coupon_del(obj, id) {
             layer.confirm('确认要删除吗？', function (index) {
-                $.post('/admin/goods/del_category', { category_id: id }, function (res) {
+                $.post('/admin/goods/del_coupon', { coupon_id: id }, function (res) {
                     if (res.status == 1) {
                         layer.msg('操作成功', { icon: 6, time: 1000 }, function () {
                             window.location.replace(location.href);
@@ -144,46 +147,46 @@
 
 
 
-		/*商品-停用*/
-		function goods_stop(obj) {
-			var id = $(obj).parents('.td-manage').data('id');
-			layer.confirm('确认要禁用优惠券吗？', function (index) {
-				//此处请求后台程序，下方是成功后的前台处理……
-				$.post('/admin/goods/edit_status_coupon',{status:1,coupon_id:id},function(res){
-					// var res = JSON.parse(res);
-					if(res.status == 1){
-						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="goods_start(this)" href="javascript:;" title="上架商品" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-						$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已失效</span>');
-						// $(obj).parents("tr").find(".td-date").find('.utime').html(res.utime);
-						$(obj).remove();
-						layer.msg('操作成功!', { icon: 6, time: 1000 });
-					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
-					}
-				});
-				
-			});
-		}
+        /*商品-停用*/
+        function goods_stop(obj) {
+            var id = $(obj).parents('.td-manage').data('id');
+            layer.confirm('确认要禁用优惠券吗？', function (index) {
+                //此处请求后台程序，下方是成功后的前台处理……
+                $.post('/admin/goods/edit_status_coupon', { status: 1, coupon_id: id }, function (res) {
+                    // var res = JSON.parse(res);
+                    if (res.status == 1) {
+                        $(obj).parents("tr").find(".td-manage").prepend('<a onClick="goods_start(this)" href="javascript:;" title="上架商品" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
+                        $(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已失效</span>');
+                        // $(obj).parents("tr").find(".td-date").find('.utime').html(res.utime);
+                        $(obj).remove();
+                        layer.msg('操作成功!', { icon: 6, time: 1000 });
+                    } else {
+                        layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+                    }
+                });
 
-		/*商品-启用*/
-		function goods_start(obj) {
-			var id = $(obj).parents('.td-manage').data('id');
-			layer.confirm('确认要启用优惠券吗？', function (index) {
-				//此处请求后台程序，下方是成功后的前台处理……
-				$.post('/admin/goods/edit_status_coupon',{status:0,coupon_id:id},function(res){
-					// var res = JSON.parse(res);
-					if(res.status == 1){
-						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="goods_stop(this)" href="javascript:;" title="下架商品" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
-						$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">正常</span>');
-						// $(obj).parents("tr").find(".td-date").find('.utime').html(res.utime);
-						$(obj).remove();
-						layer.msg('操作成功!', { icon: 6, time: 1000 });
-					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
-					}
-				});
-			});
-		}
+            });
+        }
+
+        /*商品-启用*/
+        function goods_start(obj) {
+            var id = $(obj).parents('.td-manage').data('id');
+            layer.confirm('确认要启用优惠券吗？', function (index) {
+                //此处请求后台程序，下方是成功后的前台处理……
+                $.post('/admin/goods/edit_status_coupon', { status: 0, coupon_id: id }, function (res) {
+                    // var res = JSON.parse(res);
+                    if (res.status == 1) {
+                        $(obj).parents("tr").find(".td-manage").prepend('<a onClick="goods_stop(this)" href="javascript:;" title="下架商品" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
+                        $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">正常</span>');
+                        // $(obj).parents("tr").find(".td-date").find('.utime').html(res.utime);
+                        $(obj).remove();
+                        layer.msg('操作成功!', { icon: 6, time: 1000 });
+                    } else {
+                        layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+                    }
+                });
+            });
+        }
 
     </script>
 </body>
