微信登录 --未完成

--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -86,7 +86,7 @@
 			<!--第三方登陆-->
 			<div class="the_third_party_wrap">
 				<p class="the_third_party_box">
-					<img class="the_third_party_icon" src="__STATIC__/img/public/we_chat_icon.png"/>
+					<img class="the_third_party_icon" onclick="javascript:window.location.href='/mobile/index/wx_sign'" src="__STATIC__/img/public/we_chat_icon.png"/>
 				</p>
 				<p class="the_third_party_text">第三方登录</p>
 				
