--- a/application/admin/view/goods/goods_coupon.html
+++ b/application/admin/view/goods/goods_coupon.html
@@ -51,7 +51,7 @@
                 {if condition="isset($list) && $list"}
                 {volist name="list" id="vo"}
                 <tr class="text-c">
-                    <td><input type="checkbox" value="{$vo.id}" name=""></td>
+                    <td><input type="checkbox" value="{$vo.id}" name="admin_id"></td>
                     <td>{$vo.id}</td>
                     <td>{$vo.name}</td>
                     <td>{if condition="isset($cname[$vo.goods_id])"}{$cname[$vo.goods_id]}{else /}-{/if}</td>
@@ -127,9 +127,9 @@
         /*商品分类-删除*/
         function coupon_del(obj, id) {
             layer.confirm('确认要删除吗？', function (index) {
-                $.post('/admin/goods/del_coupon', { coupon_id: id }, function (res) {
+                $.post('/admin/goods/del_coupon', { coupon_id: id ,act:'del'}, function (res) {
                     if (res.status == 1) {
-                        layer.msg('操作成功', { icon: 6, time: 1000 }, function () {
+                        layer.msg(res.msg, { icon: 6, time: 1000 }, function () {
                             window.location.replace(location.href);
                         });
 
@@ -144,8 +144,6 @@
         function category_edit(title, url, id, w, h) {
             layer_show(title, url, w, h, 1);
         }
-
-
 
         /*商品-停用*/
         function goods_stop(obj) {
@@ -187,7 +185,42 @@
                 });
             });
         }
-
+        /* 多用户删除 */
+        function datadel(){
+            id = document.getElementsByName("admin_id");
+            check_val = [];
+            for(k in id){
+                if(id[k].checked){
+                    check_val.push(id[k].value);
+                }
+            }
+            console.log(check_val);
+            if (check_val.length == 0) {
+                layer.alert("你还没有选择!");
+            } else {
+                check_val = JSON.stringify(check_val);
+                layer.confirm('确认要删除吗？', function (index) {
+                    $.ajax({
+                        type: 'POST',
+                        url: "{:url('admin/goods/del_coupon')}",
+                        data: {'id':check_val,'act':"batchdel"},
+                        dataType: 'json',
+                        success: function (data) {
+                            if (data.status == 1) {
+                                layer.msg(data.msg, { icon: 1, time: 1000 },function(){
+                                    window.location.reload();
+                                });
+                            } else {
+                                layer.msg(data.msg, { icon: 2, time: 1000 });
+                            }
+                        },
+                        error: function () {
+                            layer.alert("服务器繁忙, 请联系管理员!");
+                        },
+                    });
+                });
+            }
+        }
     </script>
 </body>
 
