--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -30,8 +30,8 @@
 			<!--头像区域-->
 			<div class="my_pic">
 				<div style="width: 2rem; position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);">
-					<img src="__STATIC__/img/my/1.jpg" style="width: 1.4rem;height: 1.4rem; border-radius: 50%;z-index: 1222;" />
-					<p>萌萌小新</p>
+					<img src="{$user['avatar']}" onerror="this.src='/public/mobile-default-user-icon.png'" style="width: 1.4rem;height: 1.4rem; border-radius: 50%;z-index: 1222;" />
+					<p>{$user['nickname']}</p>
 				</div>
 			</div>
 
