系统后台：网站设置-邮件设置 --已完成

--- a/application/admin/view/layout/setting_footer.html
+++ b/application/admin/view/layout/setting_footer.html
@@ -17,8 +17,20 @@ $(function(){
 });
 
     function article_save_submit(){
-        console.log(111);
+        
     }
+
+	function success(msg){
+		layer.msg(msg,{icon:6});
+		setTimeout(function(){
+			window.location.replace(location.href);
+		},2000);
+		
+	}
+	function error(msg){
+		layer.msg(msg,{icon:5});
+		return false;
+	}
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
