--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -19,7 +19,7 @@
 	}
 </style>
 <div class="page-container">
-	<form method="POST" class="form form-horizontal" id="form-article-add">
+	<form method="POST" class="form form-horizontal" id="form-article-add" target="ajaxR-form">
 		<input type="hidden" name="type" value="{$type}">
 		<div id="tab-system" class="HuiTab">
 			<div class="tabBar cl">
