--- a/application/admin/view/system/basic.html
+++ b/application/admin/view/system/basic.html
@@ -12,7 +12,7 @@
 				<div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">邮件发送模式：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text"  class="input-text" value="" id="" name="">
+						<input type="text"  class="input-text" value="1234" id="" name="">
 					</div>
 				</div>
 				<div class="row cl">
