账户充值、申请提现套用模板

--- a/application/mobile/view/user/my_walet.html
+++ b/application/mobile/view/user/my_walet.html
@@ -30,15 +30,15 @@
         <div class="yuqian">
         	<div>
         	<p>余额</p>
-        	<p>100000.00</p>
+        	<p>{$info.money}</p>
         	</div>
         </div>
 
 
        <div class="chongxian">
        	
-       	  <span onClick="window.location.href='zhanghu_zhongzhi.html'">账户充值</span>
-       	  <span onClick="window.location.href='shengqing_tixian.html'">申请提现</span>
+       	  <span onClick="window.location.href='/mobile/user/top_up'">账户充值</span>
+       	  <span onClick="window.location.href='/mobile/user/withdrawal'">申请提现</span>
        	
        </div>
        
