--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -12,7 +12,22 @@
 		<link rel="stylesheet" href="__STATIC__/css/public/swiper.css">
 		<script src="__STATIC__/js/public/rem.js"></script>
 	</head>
-
+<style>
+.use1 {
+    border-left: 1px solid #50a1c7;
+    border-left-style: dashed;
+    line-height: 1.1rem;
+    text-align: center;
+    width: 100%;
+    margin: .14rem 0;
+    font-size: .28rem;
+    color: #000000;
+    font-weight: 600;
+}
+.employ .use1 {
+    color: #89b8ce;
+}
+</style>
 	<body>
 		<div class="wrap_frame">
 			<!-- header -->
@@ -117,6 +132,7 @@
 			<div class="receive_box">
 				<p class="receive_tit">领取优惠券</p>
 				<div class="coupon_box">
+					{if condition = "!empty($coupon)"}
 					{volist name="coupon" id="vo"}
 					<div class="coupon_list">
 
@@ -129,20 +145,25 @@
 							<p class="pro_ori">{$vo.name}</p>
 							<p class="time publicEllipsis">{:date('Y-m-d',$vo.addtime)}-{:date('Y-m-d',$vo.deadline)}</p>
 						</div>
-			
-						<div class="coupon_use" data-id="{$vo.id}">
-							<p class="use">立即领取</p>
-							<!-- <img src="/public/static/mobile/img/purchase/logo@2x.png" alt="" class="been"> -->
-						</div>
-			
-						<!-- <div class="employ" data-id="{$vo.id}">
-							<p class="use">立即领取</p>
-							<img src="/public/static/mobile/img/purchase/logo@2x.png" alt="" class="been">
-						</div> -->
-                     
+						{if condition="in_array($vo.id,$cp_ids)"}
+							<div class="employ" data-id="">
+								<p class="use1">立即领取</p>
+								<img src="/public/static/mobile/img/purchase/logo@2x.png" alt="" class="been">
+							</div>
+						{else /}
+							<div class="coupon_use" data-id="{$vo.id}">
+								<p class="use">立即领取</p>
+								<!-- <img src="/public/static/mobile/img/purchase/logo@2x.png" alt="" class="been"> -->
+							</div>
+						{/if}
+						
 					</div>
                    {/volist}
-
+				   {else/}
+						<div class="coupon_list">
+						暂无数据
+						</div>
+				   {/if}
 				</div>
 				<div class="popup">
 					领取成功
@@ -226,10 +247,12 @@
     $('.use').click(function(){
 		var employ = $(this)
 		var img = `<img src="/public/static/mobile/img/purchase/logo@2x.png" alt="" class="been">`
-	
+	    if(employ.hasClass('use1')){
+            return false
+		}
 		var goods_id = $('#id').val()
 		var coupon = $('.coupon_use').data('id')
-
+        
 		$.ajax({
 			type: 'post',
 			url: "{:url('mobile/goods/get_coupon')}",
@@ -240,6 +263,7 @@
 					layer.msg(data.msg, { time: 1000 }, function () {
 						if (employ.parent().hasClass('coupon_use')) {
 							employ.parent().addClass('employ').removeClass('coupon_use')
+							employ.addClass('use1').removeClass('use')
 							employ.parent().append(img)
 							// $('.popup').fadeIn(500)
 							// $('.popup').animate({
