--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -78,7 +78,8 @@
                         <img src="__STATIC__/img/purchase/Button-box@2x.png" alt="">
                     </div>
                     <div class="balance" style="display: none">
-                        <input type="hidden" value="">
+                        <!-- 商品id -->
+                        <input type="hidden" name="goods_id" id="goods_id" value="{$info.id}">
                         <input type="text" disabled value="可用余额:￥{$user_info.money}" class="balance_text">
                     </div>
                 </div>
@@ -101,7 +102,7 @@
                             <input type="hidden" name="shipping_price" value="{$s_price}">
                             <!-- <input type="hidden" name="user_money" id="user_money" value=""> -->
                             <!-- 使用优惠券 -->
-                            <!-- <input type="hidden" name="coupon_price" value=""> -->
+                            <input type="hidden" name="coupon_price" id="coupon_price" value="">
                             <!-- 应付金额 -->
                             <input type="hidden" name="order_amount" id="order_amount" value="">
                             <!-- 订单总价 -->
@@ -173,22 +174,23 @@
             <div class="receive_box">
                 <p class="receive_tit">领取优惠券</p>
                 <div class="coupon_box">
-                    {volist name="coupon_list" id="v"}
+                    {volist name="coupon_list" id="v"}  
                     <div class="coupon_list">
                         <div class="coupon_msg">
                             <div class="price_box">
                                 ￥
+                                <input type="hidden" name="quota" id="quota" value="{$v.quota}">
                                 <span class="price">{$v.money}</span>
                                 <span class="original">满{$v.quota}减{$v.money}</span>
                             </div>
-                            <p class="pro_ori">{if condition="isset($cname[$vo.coupon_id])"}{$cname[$vo.coupon_id]}{else /}-{/if}</p>
+                            <p class="pro_ori">{if condition="isset($cname[$v.coupon_id])"}{$cname[$v.coupon_id]}{else /}-{/if}</p>
                             <p class="time publicEllipsis">{:date('Y-m-d',$v.stime)}-{:date('Y-m-d',$v.etime)}</p>
                         </div>
-                        <div class="coupon_use ">
+                        <div class="coupon_use " data-id="{$v.coupon_id}">
                             <p class="use">立即使用</p>
                             <!-- <img src="../../img/purchase/logo@2x.png" alt="" class="been"> -->
                         </div>
-                    </div>
+                    </div> 
                     {/volist}
                 </div>
                 <div class="popup">
@@ -243,8 +245,15 @@
 
         });
     })
-    
+    // $(document).ready(function () {
+    //     check_cou()
+    // });          
+    // function check_cou(){
+    //       var quota = $('#quota').val()
+    //       var total_amount = $('#total_amount').val()
 
+    //      console.log(total_amount+"aaaa")
+    // } 
 </script>
 
 </html>
